2011-12-05  Murray Cumming  <murrayc@murrayc.com>

	Added a test of field choices.

	* Makefile_tests.am: 
	* tests/test_selfhosting_new_then_choices.cc:
	Test Utils::get_choice_values_all().

2011-12-04  Murray Cumming  <murrayc@murray.com>

	Document DTD: adapt to the format we actually use.

	* examples/example_film_manager.glom: Resave this.
	* glom/glom_document.dtd: Change the sequence of child nodes for 
	tables and print_layouts to match what we really write.
	We do not really care about this but the DTD format forces us to 
	use a sequence.

2011-12-03  Murray Cumming  <murrayc@murrayc.com>

	test_document_load: Check reports too.

	* tests/test_document_load.cc: Check some report names.

2011-12-03  Murray Cumming  <murrayc@murrayc.com>

	test_document_load: Check a table title and its singular title.

	* tests/test_document_load.cc: Also test 
	get_data_layout_groups_have_any_fields().

2011-12-03  Murray Cumming  <murrayc@murrayc.com>

	tests/test_document_load_and_change: Change a relationship name.

	* Makefile_tests.am: Use the test_utils.
	* tests/test_document_load_and_change.cc: Also rename a relationship
	and check that a layout item uses the new relationship name.

2011-12-03  Murray Cumming  <murrayc@murrayc.com>

	Tests: Add a shared get_field_on_layout() function.

	* tests/test_document_load.cc: Move get_field_on_layout() to 
	* Makefile_tests.am:
	* tests/test_utils.[h|cc]: here.


2011-12-02  Murray Cumming  <murrayc@murrayc.com>

	DbUtils::recreate_database_from_document(): Set table privileges too.

	* glom/libglom/db_utils.cc: recreate_database_from_document():
  Also call set_table_privileges_groups_from_document().

2011-12-02  Murray Cumming  <murrayc@murrayc.com>

	DbUtils::recreate_database_from_document(): Create groups too.

	* glom/libglom/db_utils.[h|cc]: recreate_database_from_document():
  Also call add_groups_from_document().

2011-12-02  Murray Cumming  <murrayc@murrayc.com>
